@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-20T00:48:40Z",
+  "timestamp" : "2023-09-20T08:14:00Z",
   "count_outdated" : 183,
   "uniques_outdated" : 156,
-  "count" : 189,
-  "uniques" : 162,
+  "count" : 191,
+  "uniques" : 164,
   "clones" : [
     {
       "timestamp": "2023-09-09T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-20T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
