@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 1,
+  "count": 8,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2023-09-09T00:00:00Z",
@@ -31,6 +31,11 @@
       "timestamp": "2023-09-19T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-20T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
